<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.c_u_d.CreateUpdateDeleteFragment">

    <include
        android:id="@+id/toolbarCUD"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="36dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/delete_plant"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarCUD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <ScrollView
        android:id="@+id/contentCUD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarCUD">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/plantNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plant_name"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/plantTypeET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plant_type"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/plantScheduleLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:labelFor="@id/plantSchedule"
                android:text="@string/plant_schedule"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <RadioGroup
                android:id="@+id/plantSchedule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:checkedButton="@id/plantScheduleDaily"
                app:layout_constraintEnd_toEndOf="@+id/plantScheduleLabel"
                app:layout_constraintStart_toStartOf="@+id/plantScheduleLabel"
                app:layout_constraintTop_toBottomOf="@+id/plantScheduleLabel">

                <RadioButton
                    android:id="@+id/plantScheduleDaily"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/daily"
                    tools:ignore="TextContrastCheck" />

                <RadioButton
                    android:id="@+id/plantScheduleWeekly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly" />

                <RadioButton
                    android:id="@+id/plantScheduleMonthly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monthly" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/plantSchedule"
                app:layout_constraintStart_toStartOf="@+id/plantSchedule"
                app:layout_constraintTop_toBottomOf="@+id/plantSchedule">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/plantDescriptionET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/plant_description"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/done"
                app:icon="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loadingCUD"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarCUD" />

</androidx.constraintlayout.widget.ConstraintLayout>